--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/d3-sankey@0.12.3/dist/d3-sankey.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script>
+        window.MathJax = {
+            tex: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']],
+                displayMath: [['$$', '$$'], ['\\[', '\\]']],
+                processEscapes: true,
+                processEnvironments: true
+            },
+            options: {
+                skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+            }
+        };
+    </script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <style>
         :root {
@@ -404,8 +417,15 @@
 
         .latex-render {
             font-family: 'Times New Roman', serif;
-            font-style: italic;
+            font-style: normal;
             margin: 0.5rem 0;
+            text-align: center;
+            font-size: 1.1rem;
+            color: var(--primary);
+            background-color: #f8fafc;
+            padding: 0.75rem;
+            border-radius: 0.375rem;
+            border-left: 3px solid var(--secondary);
         }
 
         /* Data Sources */
@@ -1313,10 +1333,7 @@
 
                                 <div class="formula-display">
                                     <div class="formula-type">Symbolic Notation</div>
-                                    <div>r = Rf + β(Rm - Rf)</div>
-
-                                    <div class="formula-type">LaTeX Rendering</div>
-                                    <div class="latex-render">r = R_f + \beta(R_m - R_f)</div>
+                                    <div class="latex-render">$r = R_f + \beta(R_m - R_f)$</div>
 
                                     <div class="formula-type">Substituted Values</div>
                                     <div>r = 0.043 + 0.10(0.080 - 0.043)</div>
@@ -1356,10 +1373,7 @@
 
                                 <div class="formula-display">
                                     <div class="formula-type">Symbolic Notation</div>
-                                    <div>RI = E - (r × BV)</div>
-
-                                    <div class="formula-type">LaTeX Rendering</div>
-                                    <div class="latex-render">RI = E - (r \times BV_{t-1})</div>
+                                    <div class="latex-render">$RI = E - (r \times BV_{t-1})$</div>
 
                                     <div class="formula-type">Substituted Values</div>
                                     <div>RI = -5,010,705.00 - (0.047 × 269,330,000.00)</div>
@@ -1400,10 +1414,7 @@
 
                                 <div class="formula-display">
                                     <div class="formula-type">Symbolic Notation</div>
-                                    <div>PV = RI / (1 + r)<sup>n</sup></div>
-
-                                    <div class="formula-type">LaTeX Rendering</div>
-                                    <div class="latex-render">PV = \frac{RI}{(1 + r)^n}</div>
+                                    <div class="latex-render">$PV = \frac{RI}{(1 + r)^n}$</div>
 
                                     <div class="formula-type">Substituted Values</div>
                                     <div>PV = -17,685,374.80 / (1 + 0.047)<sup>1</sup></div>
@@ -1443,10 +1454,7 @@
 
                                 <div class="formula-display">
                                     <div class="formula-type">Symbolic Notation</div>
-                                    <div>TV = RI<sub>terminal</sub> / (r - g)</div>
-
-                                    <div class="formula-type">LaTeX Rendering</div>
-                                    <div class="latex-render">TV = \frac{RI_{terminal}}{r - g}</div>
+                                    <div class="latex-render">$TV = \frac{RI_{terminal}}{r - g}$</div>
 
                                     <div class="formula-type">Substituted Values</div>
                                     <div>TV = -19,093,540.09 / (0.047 - 0.025)</div>
@@ -1490,11 +1498,7 @@
 
                                 <div class="formula-display">
                                     <div class="formula-type">Symbolic Notation</div>
-                                    <div>WACC = (E/V × Re) + (D/V × Rd × (1-T))</div>
-
-                                    <div class="formula-type">LaTeX Rendering</div>
-                                    <div class="latex-render">WACC = \frac{E}{V} \times R_e + \frac{D}{V} \times R_d
-                                        \times (1-T)</div>
+                                    <div class="latex-render">$WACC = \frac{E}{V} \times R_e + \frac{D}{V} \times R_d \times (1-T)$</div>
 
                                     <div class="formula-type">Substituted Values</div>
                                     <div>WACC = (1.000 × 0.080) + (0.000 × 0.000 × (1-0.000))</div>
@@ -1534,10 +1538,7 @@
 
                                 <div class="formula-display">
                                     <div class="formula-type">Symbolic Notation</div>
-                                    <div>FCF = OCF - CapEx - ΔWC</div>
-
-                                    <div class="formula-type">LaTeX Rendering</div>
-                                    <div class="latex-render">FCF = OCF - CapEx - \Delta WC</div>
+                                    <div class="latex-render">$FCF = OCF - CapEx - \Delta WC$</div>
 
                                     <div class="formula-type">Substituted Values</div>
                                     <div>FCF = -4,810,276.80 - -801,712.80 - 0.00</div>
@@ -1578,10 +1579,7 @@
 
                                 <div class="formula-display">
                                     <div class="formula-type">Symbolic Notation</div>
-                                    <div>PV = FCF / (1 + WACC)<sup>n</sup></div>
-
-                                    <div class="formula-type">LaTeX Rendering</div>
-                                    <div class="latex-render">PV = \frac{FCF}{(1 + WACC)^n}</div>
+                                    <div class="latex-render">$PV = \frac{FCF}{(1 + WACC)^n}$</div>
 
                                     <div class="formula-type">Substituted Values</div>
                                     <div>PV = -4,008,564.00 / (1 + 0.080)<sup>1</sup></div>
@@ -1621,10 +1619,7 @@
 
                                 <div class="formula-display">
                                     <div class="formula-type">Symbolic Notation</div>
-                                    <div>TV = FCF<sub>terminal</sub> / (WACC - g)</div>
-
-                                    <div class="formula-type">LaTeX Rendering</div>
-                                    <div class="latex-render">TV = \frac{FCF_{terminal}}{WACC - g}</div>
+                                    <div class="latex-render">$TV = \frac{FCF_{terminal}}{WACC - g}$</div>
 
                                     <div class="formula-type">Substituted Values</div>
                                     <div>TV = -6,374,063.40 / (0.080 - 0.025)</div>
@@ -2218,18 +2213,18 @@
                 .attr('stroke-width', d => Math.max(1, d.width))
                 .attr('fill', 'none')
                 .attr('stroke-opacity', 0.6)
-                .on('mouseover', function(event, d) {
+                .on('mouseover', function (event, d) {
                     d3.select(this).attr('stroke-opacity', 0.8);
                     const tooltip = d3.select('#valuation-tooltip');
                     tooltip.html(`
                         <div><strong>${d.source.name} → ${d.target.name}</strong></div>
                         <div class="sankey-value">$${d.value.toFixed(1)}M</div>
                     `)
-                    .classed('visible', true)
-                    .style('left', (event.pageX + 10) + 'px')
-                    .style('top', (event.pageY - 10) + 'px');
+                        .classed('visible', true)
+                        .style('left', (event.pageX + 10) + 'px')
+                        .style('top', (event.pageY - 10) + 'px');
                 })
-                .on('mouseout', function(event, d) {
+                .on('mouseout', function (event, d) {
                     d3.select(this).attr('stroke-opacity', 0.6);
                     d3.select('#valuation-tooltip').classed('visible', false);
                 });
@@ -2288,7 +2283,7 @@
 
             // Extract DCF data for first 3 periods
             const dcfSteps = data.calculations.dcf_calculation.steps;
-            
+
             // Get operating cash flows, capex, and free cash flows for first 3 periods
             const periods = [1, 2, 3];
             let totalOCF = 0, totalCapex = 0, totalFCF = 0, totalPV = 0;
@@ -2296,7 +2291,7 @@
             periods.forEach(period => {
                 const fcfStep = dcfSteps.find(step => step.step_id === `dcf_fcf_${period}`);
                 const pvStep = dcfSteps.find(step => step.step_id === `dcf_pv_${period}`);
-                
+
                 if (fcfStep) {
                     totalOCF += fcfStep.inputs.operating_cash_flow;
                     totalCapex += fcfStep.inputs.capex;
@@ -2359,7 +2354,7 @@
                 .attr('stroke-width', d => Math.max(1, d.width))
                 .attr('fill', 'none')
                 .attr('stroke-opacity', 0.6)
-                .on('mouseover', function(event, d) {
+                .on('mouseover', function (event, d) {
                     d3.select(this).attr('stroke-opacity', 0.8);
                     const tooltip = d3.select('#cashflow-tooltip');
                     const flowType = d.source.name === 'CapEx' ? 'Deduction' : 'Flow';
@@ -2367,11 +2362,11 @@
                         <div><strong>${d.source.name} → ${d.target.name}</strong></div>
                         <div class="sankey-value">${flowType}: $${d.value.toFixed(1)}M</div>
                     `)
-                    .classed('visible', true)
-                    .style('left', (event.pageX + 10) + 'px')
-                    .style('top', (event.pageY - 10) + 'px');
+                        .classed('visible', true)
+                        .style('left', (event.pageX + 10) + 'px')
+                        .style('top', (event.pageY - 10) + 'px');
                 })
-                .on('mouseout', function(event, d) {
+                .on('mouseout', function (event, d) {
                     d3.select(this).attr('stroke-opacity', 0.6);
                     d3.select('#cashflow-tooltip').classed('visible', false);
                 });
@@ -2418,6 +2413,11 @@
         document.addEventListener('DOMContentLoaded', async function () {
             initializeCharts();
 
+            // Ensure MathJax processes all math on page load
+            if (window.MathJax && window.MathJax.typesetPromise) {
+                window.MathJax.typesetPromise().catch((err) => console.log(err.message));
+            }
+
             // Discover and populate companies
             const companies = await discoverCompanies();
             if (companies.length > 0) {
@@ -2448,6 +2448,11 @@
                     if (!isActive) {
                         content.classList.add('active');
                         this.querySelector('span:last-child').textContent = '−';
+
+                        // Re-render MathJax for the newly opened content
+                        if (window.MathJax && window.MathJax.typesetPromise) {
+                            window.MathJax.typesetPromise([content]).catch((err) => console.log(err.message));
+                        }
                     }
                 });
             });
